--- a/client/package.json
+++ b/client/package.json
@@ -6,15 +6,18 @@
     "@testing-library/jest-dom": "^5.17.0",
     "@testing-library/react": "^13.4.0",
     "@testing-library/user-event": "^14.5.1",
+    "axios": "^1.6.2",
+    "clsx": "^2.0.0",
+    "i18next": "^25.8.4",
+    "i18next-browser-languagedetector": "^8.2.0",
+    "lucide-react": "^0.294.0",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-hot-toast": "^2.4.1",
+    "react-i18next": "^16.5.4",
     "react-router-dom": "^6.8.1",
     "react-scripts": "5.0.1",
-    "axios": "^1.6.2",
-    "recharts": "^2.8.0",
-    "react-hot-toast": "^2.4.1",
-    "lucide-react": "^0.294.0",
-    "clsx": "^2.0.0"
+    "recharts": "^2.8.0"
   },
   "scripts": {
     "start": "react-scripts start",
@@ -41,9 +44,9 @@
     ]
   },
   "devDependencies": {
-    "tailwindcss": "^3.3.6",
     "autoprefixer": "^10.4.16",
-    "postcss": "^8.4.32"
+    "postcss": "^8.4.32",
+    "tailwindcss": "^3.3.6"
   },
   "proxy": "http://localhost:5000"
 }
